ingresses/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: kube-system
spec:
  rules:
  - host: logging.rockandcode.ir
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kibana-logging
            port:
              number: 80
